# dot

./: .gitignore
.gemini/: settings.json
docs/: poc.md
docs/alpha/: blocks_v2.md  full_spec.md  gemini_info.md  project.json
docs/archive/: architecture-crisis-state.json  architecture_recap.md  project.json  prospective_blocks.md
docs/archive/letta-era/: obsidian_spec.md  vault_tool_spec.md
poc/: .gitignore  config.yaml  dot_cli.py  dot_mcp_server.py  invoke_dot.py  mcp-config.json  pyproject.toml  scheduler.yaml
poc/.gemini/: settings.json
poc/.gemini/policies/: mcp.toml
poc/blocks/: active-scratchpad.yaml  admin-relationship.yaml  current-focus.yaml  init.yaml  interests-cyrus.yaml  interests-dot.yaml  operating-procedures.yaml  operational-capabilities.yaml  pending-actions.yaml  persona.yaml  routing-state.yaml  social-norms.yaml  telemetry-framework.yaml  vault-schema.yaml
poc/orchestrator/: app.py  config.py  discord_bridge.py  models.py  phone_book.py  scheduler.py
poc/skills/: README.md
poc/skills/introspection/: SKILL.md  debugging-communication.md  debugging-drift.md
poc/skills/memory/: SKILL.md  maintenance.md
poc/skills/onboarding/: SKILL.md  establishing-goals.md  establishing-identity.md  establishing-schedules.md
poc/skills/prediction-review/: SKILL.md
poc/skills/skill-authoring/: SKILL.md
