[project]
name = "dot-poc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10",
    "discord.py>=2.3",
    "mcp",
    "pyyaml",
]

[tool.setuptools]
py-modules = ["dot_cli", "invoke_dot"]
packages = ["orchestrator"]

[project.scripts]
dot = "dot_cli:main"
dot-coordinator = "orchestrator.app:main"
